// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with action 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFF",
        "borderWidth": 0,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "width": "100%",
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 16,
        "position": "relative",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#111A34",
              "fontSize": 18,
              "fontWeight": "normal",
              "lineHeight": 18,
            },
            Object {},
          ]
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#858B9C",
              "fontSize": 14,
              "lineHeight": 18,
              "marginTop": 6,
            },
            Object {},
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "display": "flex",
          "flexShrink": 0,
          "justifyContent": "flex-end",
          "marginLeft": 6,
        }
      }
    >
      <Text>
        操作
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  />
</View>
`;

exports[`renders correctly with brief 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFF",
        "borderWidth": 0,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "width": "100%",
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 16,
        "position": "relative",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#111A34",
              "fontSize": 18,
              "fontWeight": "normal",
              "lineHeight": 18,
            },
            Object {},
          ]
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#858B9C",
              "fontSize": 14,
              "lineHeight": 18,
              "marginTop": 6,
            },
            Object {},
          ]
        }
      >
        区域描述性文本，可根据具体场景配置
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "display": "flex",
          "flexShrink": 0,
          "justifyContent": "flex-end",
          "marginLeft": 6,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  />
</View>
`;

exports[`renders correctly with custom style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ddd",
        "position": "relative",
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 16,
        "position": "relative",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#111A34",
              "fontSize": 18,
              "fontWeight": "normal",
              "lineHeight": 18,
            },
            Object {},
          ]
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#858B9C",
              "fontSize": 14,
              "lineHeight": 18,
              "marginTop": 6,
            },
            Object {},
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "display": "flex",
          "flexShrink": 0,
          "justifyContent": "flex-end",
          "marginLeft": 6,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  />
</View>
`;

exports[`renders correctly with defaults 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFF",
        "borderWidth": 0,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "width": "100%",
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 16,
        "position": "relative",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#111A34",
              "fontSize": 18,
              "fontWeight": "normal",
              "lineHeight": 18,
            },
            Object {},
          ]
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#858B9C",
              "fontSize": 14,
              "lineHeight": 18,
              "marginTop": 6,
            },
            Object {},
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "display": "flex",
          "flexShrink": 0,
          "justifyContent": "flex-end",
          "marginLeft": 6,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  />
</View>
`;

exports[`renders correctly with disabled 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFF",
        "borderWidth": 0,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "width": "100%",
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 16,
        "position": "relative",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#111A34",
              "fontSize": 18,
              "fontWeight": "normal",
              "lineHeight": 18,
            },
            Object {
              "color": "#C5CAD5",
            },
          ]
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#858B9C",
              "fontSize": 14,
              "lineHeight": 18,
              "marginTop": 6,
            },
            Object {
              "color": "#C5CAD5",
            },
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "display": "flex",
          "flexShrink": 0,
          "justifyContent": "flex-end",
          "marginLeft": 6,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  />
</View>
`;

exports[`renders correctly with empty style 1`] = `
<View
  style={
    Array [
      undefined,
      Object {},
    ]
  }
>
  <View>
    <View>
      <Text
        style={
          Array [
            undefined,
            Object {},
          ]
        }
      />
      <Text
        style={
          Array [
            undefined,
            Object {},
          ]
        }
      />
    </View>
    <View />
  </View>
  <View />
</View>
`;

exports[`renders correctly with footer 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFF",
        "borderWidth": 0,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "width": "100%",
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 16,
        "position": "relative",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#111A34",
              "fontSize": 18,
              "fontWeight": "normal",
              "lineHeight": 18,
            },
            Object {},
          ]
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#858B9C",
              "fontSize": 14,
              "lineHeight": 18,
              "marginTop": 6,
            },
            Object {},
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "display": "flex",
          "flexShrink": 0,
          "justifyContent": "flex-end",
          "marginLeft": 6,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <Text>
      操作
    </Text>
  </View>
</View>
`;

exports[`renders correctly with plain 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFF",
        "borderWidth": 0,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "width": "100%",
      },
      Object {
        "backgroundColor": "transparent",
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 16,
        "position": "relative",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#111A34",
              "fontSize": 18,
              "fontWeight": "normal",
              "lineHeight": 18,
            },
            Object {},
          ]
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#858B9C",
              "fontSize": 14,
              "lineHeight": 18,
              "marginTop": 6,
            },
            Object {},
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "display": "flex",
          "flexShrink": 0,
          "justifyContent": "flex-end",
          "marginLeft": 6,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  />
</View>
`;

exports[`renders correctly with title 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFF",
        "borderWidth": 0,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
        "width": "100%",
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 16,
        "position": "relative",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "flexShrink": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#111A34",
              "fontSize": 18,
              "fontWeight": "normal",
              "lineHeight": 18,
            },
            Object {},
          ]
        }
      >
        区域标题
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#858B9C",
              "fontSize": 14,
              "lineHeight": 18,
              "marginTop": 6,
            },
            Object {},
          ]
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "display": "flex",
          "flexShrink": 0,
          "justifyContent": "flex-end",
          "marginLeft": 6,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  />
</View>
`;
